--- a/style.css
+++ b/style.css
@@ -60,6 +60,40 @@
         padding: 20px;
         font-family:'Sarala', sans-serif;
     }
+
+    .fundo{
+        background-color: #FF1010;
+        height:325px;
+        width:100%;
+        margin-bottom:0px;
+        
+        }
+
+
+   /*MOBILE*/
+
+    @media (max-width: 740px) {
+
+        .fundo{
+            height: 360px;
+            }
+        }
+
+   /*tablet*/
+
+     @media (min-width: 1024) {
+         .fundo{
+             height:1366;
+         }
+        }
+
+   /*desktop*/
+
+      @media (min-width: 1980) {
+         .fundo{
+             height:1080;
+         }
+        }
     
 
 
