--- a/style.css
+++ b/style.css
@@ -28,7 +28,15 @@
    /*desktop*/
 
       @media (min-width: 1980px) {
-        
+        header{
+            
+            width:100%;
+            align-items: center;
+            
+        }
+        .menu__intensDeCima{
+            display:block;
+        }
         .menu__hamburguer{
             
             padding:20px;
@@ -41,13 +49,18 @@
             
             width:150px;
             height:150px;
+            background-color: gray;
 
         }
 
         .menu__caixaText{
             border-radius: 30px;
-            width:300px;
+            width:400px;
             text-align: center;
+            margin-left: 30%;
+            margin-
+            ;
+            
             
         }
 
@@ -56,7 +69,7 @@
             background-color: #DA0000;
             width:100%;
             height: 40px;
-            display: block;
+            display: fixed;
             align-items: center;
 
         }
