--- a/style.css
+++ b/style.css
@@ -86,3 +86,79 @@
             
         }
         }
+ body{
+        background: linear-gradient(90.15deg,rgb(255, 255, 255) 50.62%,rgb(255, 255, 255) 85.61%);
+        
+    }
+    .cabeçario{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 90px;
+    }
+
+    .logo{
+        width: 90px;
+        height: 90px;
+        margin-top:-10px;
+    }
+
+    .itens{
+        display:flex;
+        gap: 500px;
+        font-size: 18px;
+        font-family: 'Sarala', sans-serif;
+        font-weight: 400;
+        color: white;
+        text-decoration: none;
+    }   
+   
+    .mid1{
+        display: flex;
+        flex-direction: bloco;
+        justify-content: space-around; 
+        gap: 60px; 
+        padding-top: 100px;
+        padding-bottom: 100px;
+        padding-left: 10%;
+    }
+
+    .borda{
+        border-top: 50px solid #ff1010;
+        
+    }
+
+
+    
+    .fot{
+       background-color: #FF1010;
+        height:325px;
+        width:100%;
+        magin-bottom:0px;
+    }
+    
+
+
+
+
+   /*MOBILE*/
+
+    @media (max-width: 740px) {
+
+        .fundo{
+            height: 360px;
+            }
+        }
+
+   /*tablet*/
+
+     @media (min-width: 1024) {
+         .fundo{
+             height:1366;
+
+   /*desktop*/
+
+      @media (min-width: 1980) {
+         .fundo{
+             height:1080;
