--- a/style.css
+++ b/style.css
@@ -49,13 +49,12 @@
             align-items: center;
             flex-direction: row;
             justify-content: space-between;
-            gap:50px;
-        
+          
         }
      
         .menu__hamburguer{
             
-            padding:20px;
+            padding:5px;
             width:150px;
             
     
@@ -73,7 +72,8 @@
             border-radius: 30px;
             width:400px;
             text-align: center;
-            margin-left: 30%;
+            padding: 5px;
+          
             
             
             
@@ -99,8 +99,11 @@
 
             
             
-        }*/
         }
+        .menu__carrinho{
+            margin-right:5px;
+        }
+        
  body{
         background: linear-gradient(90.15deg,rgb(255, 255, 255) 50.62%,rgb(255, 255, 255) 85.61%);
         
