--- a/style.css
+++ b/style.css
@@ -1,149 +1,110 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
-  *{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    .
+}
+
+body {
+    width: 100%;
+    background: linear-gradient(90.15deg, rgb(255, 255, 255) 50.62%, rgb(255, 255, 255) 85.61%);
+    font-family: 'Sarala', sans-serif;
+}
+
+
+@media (max-width: 720px) {
+    
+}
+
+
+@media (min-width: 721px) and (max-width: 2048px) {
+    .fundo {
+        height: 1366px;
     }
-    body{
-        width:100%;
-    }    
-    
-
-    @media (min-width: 360px) {
-
-       
-        .fundo{
-            height: 740px;
-            }
-        }
-
-   /*tablet*/
-
-     @media (min-width: 481px) and (max-width: 1024px) {
-         .fundo{
-             height:1366;
-         }
-        }
-
-   /*desktop*/
-
-      @media (min-width: 1025px) {
-       header{
-            
-            
-            width:100%;
-            height:150px;
-            }
-        
-            
-            
-            
-            
-        }
-
-        .menu__intensDeCima{ 
-            
-            display: flex;
-            align-items: center;
-            flex-direction: row;
-            justify-content: space-between;
-          
-        }
-     
-        .menu__hamburguer{
-            
-            padding:5px;
-            width:150px;
-            
-    
-        }
-
-        .menu__panda{
-            
-            width:150px;
-            height:150px;
-           
-
-        }
-
-        .menu__caixaText{
-            border-radius: 30px;
-            width:400px;
-            text-align: center;
-            padding: 5px;
-          
-            
-            
-            
-        }
+}
 
 
-        .menu__block{
-            background-color: #DA0000;
-            width:100%;
-            height: 40px;
-            display: fixed;
-            align-items: center;
-
-        }
-        .menu__block__text{
-            margin-left: 16%;
-            margin-top:-5px;
-            height:200px;
-            color:white;
-            font-size: 30px;
-            
-            
-
-            
-            
-        }
-        .menu__carrinho{
-            margin-right:5px;
-        }
-        
- body{
-        background: linear-gradient(90.15deg,rgb(255, 255, 255) 50.62%,rgb(255, 255, 255) 85.61%);
-        
+@media (min-width: 2049px) {
+    header {
+        width: 100%;
+        height: 150px;
     }
-    
 
-    .itens{
-        display:flex;
+    .menu__intensDeCima {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .menu__hamburguer {
+        padding: 5px;
+        width: 150px;
+    }
+
+    .menu__panda {
+        width: 150px;
+        height: 150px;
+    }
+
+    .menu__caixaText {
+        border-radius: 30px;
+        width: 400px;
+        text-align: center;
+        padding: 5px;
+    }
+
+    .menu__block {
+        background-color: #DA0000;
+        width: 100%;
+        height: 40px;
+        position: fixed;
+        align-items: center;
+    }
+
+    .menu__block__text {
+        margin-left: 16%;
+        margin-top: -5px;
+        height: 200px;
+        color: white;
+        font-size: 30px;
+    }
+
+    .menu__carrinho {
+        margin-right: 5px;
+    }
+
+    .itens {
+        display: flex;
         gap: 500px;
         font-size: 18px;
-        font-family: 'Sarala', sans-serif;
         font-weight: 400;
         color: white;
         text-decoration: none;
-    }   
-   
-    .mid1{
+    }
+
+    .mid1 {
         display: flex;
-        flex-direction: bloco;
-        justify-content: space-around; 
-        gap: 60px; 
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 60px;
         padding-top: 100px;
         padding-bottom: 100px;
         padding-left: 10%;
     }
 
-    .borda{
+    .borda {
         border-top: 50px solid #ff1010;
-        
     }
 
-
-    
-    .fot{
-       background-color: #FF1010;
-        height:325px;
-        width:100%;
-        magin-bottom:0px;
+    .fot {
+        background-color: #FF1010;
+        height: 325px;
+        width: 100%;
+        margin-bottom: 0;
     }
-    
+}
 
 
 
