--- a/style.css
+++ b/style.css
@@ -14,7 +14,87 @@ body {
 
 
 @media (max-width: 720px) {
-    
+    header {
+        width: 100%;
+        height: 150px;
+    }
+
+    .menu__intensDeCima {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .menu__hamburguer {
+        padding: 5px;
+        width: 100px;
+    }
+
+    .menu__panda {
+        width: 130px;
+        height: 130px;
+    }
+
+    .menu__caixaText {
+        border-radius: 30px;
+        width: 400px;
+        text-align: center;
+        padding: 5px;
+        font-size: 15px;
+        margin-right: 20px;
+    }
+
+    .menu__block {
+        background-color: #DA0000;
+        width: 100%;
+        height: 20px;
+        position: fixed;
+        align-items: center;
+    }
+
+    .menu__block__text {
+        margin-left: 14%;
+        margin-top: -5px;
+        height: 200px;
+        color: white;
+        font-size:14px;
+    }
+
+    .menu__carrinho {
+        margin-right: 5px;
+        width:70px;
+    }
+
+    .itens {
+        display: flex;
+        gap: 500px;
+        font-size: 18px;
+        font-weight: 400;
+        color: white;
+        text-decoration: none;
+    }
+
+    .mid1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 60px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        padding-left: 10%;
+    }
+
+    .borda {
+        border-top: 50px solid #ff1010;
+    }
+
+    .fot {
+        background-color: #FF1010;
+        height: 325px;
+        width: 100%;
+        margin-bottom: 0;
+    }
 }
 
 
