--- a/style.css
+++ b/style.css
@@ -28,12 +28,15 @@ body {
 
     .menu__hamburguer {
         padding: 5px;
-        width: 100px;
+        width: 70px;
     }
 
     .menu__panda {
-        width: 130px;
-        height: 130px;
+        width: 100px;
+        height: 100px;
+    }
+    .menu__perfil{
+        width:50px;
     }
 
     .menu__caixaText {
@@ -48,22 +51,22 @@ body {
     .menu__block {
         background-color: #DA0000;
         width: 100%;
-        height: 20px;
+        height: 40px;
         position: fixed;
         align-items: center;
     }
 
     .menu__block__text {
-        margin-left: 14%;
+        margin-left: 13%;
         margin-top: -5px;
         height: 200px;
         color: white;
-        font-size:14px;
+        font-size:15px;
     }
 
     .menu__carrinho {
         margin-right: 5px;
-        width:70px;
+        width:50px;
     }
 
     .itens {
@@ -85,23 +88,21 @@ body {
         padding-left: 10%;
     }
 
-    .borda {
-        border-top: 50px solid #ff1010;
-    }
+   
 
-    .fot {
+     .fot{
         background-color: #FF1010;
-        height: 325px;
+        height: 10%;
         width: 100%;
         margin-bottom: 0;
+        position: fixed;
+        bottom:0
     }
 }
 
 
 @media (min-width: 721px) and (max-width: 2048px) {
-    .fundo {
-        height: 1366px;
-    }
+   
 }
 
 
@@ -142,6 +143,9 @@ body {
         position: fixed;
         align-items: center;
     }
+    .menu__perfil{
+        width:100px
+    }
 
     .menu__block__text {
         margin-left: 16%;
@@ -153,6 +157,7 @@ body {
 
     .menu__carrinho {
         margin-right: 5px;
+        width: 100px;
     }
 
     .itens {
@@ -180,9 +185,11 @@ body {
 
     .fot {
         background-color: #FF1010;
-        height: 325px;
+        height: 10%;
         width: 100%;
         margin-bottom: 0;
+        position: fixed;
+        bottom:0
     }
 }
 
