--- a/style.css
+++ b/style.css
@@ -103,10 +103,6 @@ body {
 
 @media (min-width: 721px) and (max-width: 2048px) {
    
-}
-
-
-@media (min-width: 2049px) {
     header {
         width: 100%;
         height: 150px;
@@ -191,10 +187,101 @@ body {
         position: fixed;
         bottom:0
     }
+
 }
 
 
+@media (min-width: 2049px) {
+    header {
+        width: 100%;
+        height: 150px;
+    }
 
+    .menu__intensDeCima {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .menu__hamburguer {
+        padding: 5px;
+        width: 90px;
+    }
+
+    .menu__panda {
+        width: 150px;
+        height: 150px;
+    }
+
+    .menu__caixaText {
+        border-radius: 30px;
+        width: 400px;
+        text-align: center;
+        padding: 5px;
+    }
+
+    .menu__block {
+        background-color: #DA0000;
+        width: 100%;
+        height: 40px;
+        position: fixed;
+        align-items: center;
+    }
+    .menu__perfil{
+        width:100px
+    }
+
+    .menu__block__text {
+        margin-left: 16%;
+        margin-top: -5px;
+        height: 200px;
+        color: white;
+        font-size: 30px;
+    }
+
+    .menu__carrinho {
+        margin-right: 5px;
+        width: 100px;
+    }
+
+    .itens {
+        display: flex;
+        gap: 500px;
+        font-size: 18px;
+        font-weight: 400;
+        color: white;
+        text-decoration: none;
+    }
+
+    .mid1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 60px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        padding-left: 10%;
+    }
+
+    .borda {
+        border-top: 50px solid #ff1010;
+    }
+
+    .fot {
+        background-color: #FF1010;
+        height: 10%;
+        width: 100%;
+        margin-bottom: 0;
+        position: fixed;
+        bottom:0
+    }
+}
+
+/*Smartphone:720x1280
+tablet: 2048x1536
+Desktop: 2560x1440
+*/
 
    /*MOBILE*/
 
