--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     }
 
     .menu__block {
-        background-color: rgb(255, 255, 255);
+        background-color: #FF1010;
         width: 100%;
         height: 40px;
         position: fixed;
@@ -95,7 +95,8 @@ body {
         height: 10%;
         width: 100%;
         margin-bottom: 0;
-        bottom:0
+        bottom:0;
+        position:absolute
     }
 }
 
@@ -179,8 +180,8 @@ body {
         height: 10%;
         width: 100%;
         margin-bottom: 0;
-        position: fixed;
-        bottom:0
+        bottom:0;
+        position:absolute
     }
 
 }
@@ -214,6 +215,8 @@ body {
         width: 450px;
         text-align: center;
         padding: 5px;
+        margin-left:70px;
+        
     }
 
     .menu__block {
@@ -262,8 +265,8 @@ body {
         height: 10%;
         width: 100%;
         margin-bottom: 0;
-        display: fixed;
-        bottom:0
+        bottom:0;
+        position:absolute
     }
 }
 
